data/derived/comb/progs/unify/prog4694.ml.out
Characters 80-93:
  | hd::tl -> lengthOfList(tl, count+1);;
                          ^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c list
